# ArchaeoHack-Group-Still-Loading

./: README.md
archaeohack/: pyproject.toml  train.cache
archaeohack/backend/: app.py  apptest.py
archaeohack/egyptian_hieroglyphs_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
archaeohack/frontend/: index.html
archaeohack/frontend/js/: app.js
archaeohack/model/: aug_split.py  model_test.py  train.py
archaeohack/processed_data/: train.cache  val.cache
runs/classify/1759/: args.yaml  results.csv
runs/classify/17592/: args.yaml  results.csv
runs/classify/17593/: args.yaml  results.csv
runs/classify/17594/: args.yaml  results.csv
