[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "egyptian-hieroglyphs-classifier"
version = "1.0"
description = "Classifies Egyptian hieroglyphs using machine learning."
requires-python = ">=3.8"
authors = [
  { name="Khalon Manswell", email="khalonmanswell@gmail.com"}
  { name="", email=""}
  { name="", email=""}
]
dependencies = [
  "flask>=2.0.0",
  "flask-cors>=4.0.0",
  "torch>=1.9.0",
  "torchvision>=0.10.0",
  "pillow>=9.0.0",
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "tqdm>=4.60.0",
  "ultralytics>=8.0.0",
  "opencv-python>=4.5.0",
]

[project.urls]
"Homepage" = "https://github.com/KhalonManswell/ArchaeoHack-Group-Still-Loading"